# mp_plugins

./: .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.test  README.md  analyze_rigidity.py  compare_landmarks.py  convert_models.py  download_face_landmarker_model.sh  face_detector.onnx.engine_sm86_fp16  generate_all_outputs.sh  generate_landmarks.sh  get_so_file.sh  landmarks_cpu.txt  landmarks_gpu.txt  mozza_process.py  smile.dfm  test_plugins.sh
  gstfacelandmarks/: BUILD
  gstmozzamp/: BUILD  gstmozzamp.cpp  mp_runtime_loader.h
OLD/: CMakeLists.txt  WORKSPACE.snippet
OLD/bazel/: BUILD.gstfacelandmarks
OLD/scripts/: export_mediapipe.sh  get_models.sh
OLD/src/: deform_utils.hpp  gstfacelandmarks.cpp
env/: face_detector.onnx  face_detector.onnx.engine_sm86_fp16
gstfacelandmarks/: BUILD  gstfacelandmarks.cpp
gstmozzamp/: BUILD  deform_utils.cpp  deform_utils.hpp  dfm.cpp  dfm.hpp  gstmozzamp.cpp  gstmozzamp.cpp_transform_fixed
gstmozzamp_gpu/: BUILD  README.md  cuda_mls_warp.cu  cuda_mls_warp.h  cuda_preprocess.cu  cuda_preprocess.h  gstmozzamp_gpu.cpp  task_model_extractor.cpp  task_model_extractor.h  trt_face_landmarker.cpp  trt_face_landmarker.cpp_end  trt_face_landmarker.cpp_end_fixed  trt_face_landmarker.cpp_end_v3  trt_face_landmarker.h
gstshared/: BUILD  mp_runtime.cc  mp_runtime.h  mp_runtime_loader.cc  mp_runtime_loader.h
imgwarp/: delaunay.h  imgwarp_mls.cpp  imgwarp_mls.h  imgwarp_mls_rigid.cpp  imgwarp_mls_rigid.h  imgwarp_mls_similarity.cpp  imgwarp_mls_similarity.h  imgwarp_piecewiseaffine.cpp  imgwarp_piecewiseaffine.h
(+12 files in other folders)
